# family-tree-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/family_tree/: __init__.py  cli.py  drawing.py  fonts.py  layout.py  render.py  translations.py  trees.py
src/family_tree/data/: translations.json
src/family_tree/data/trees/: emma.yaml  lars.yaml  sample.yaml
src/family_tree/trees/: __init__.py
tests/: test_cli.py  test_layout.py  test_render.py  test_translations.py  test_trees.py
