[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "family-tree-generator"
version = "0.1.0"
description = "Multilingual family-tree PDF generator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "reportlab>=4.0",
    "arabic-reshaper>=3.0",
    "python-bidi>=0.4",
    "pyyaml>=6.0",
]

[project.scripts]
family-tree = "family_tree.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
family_tree = ["data/*.json", "data/trees/*.yaml", "assets/fonts/*"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.mypy]
python_version = "3.10"
